force-app/main/default/objects/DashboardTarget__c/DashboardTarget__c.object-meta.xml
<CustomObject>
    <description>Object to store numbers that will be used as the target for dynamic gauge components on dashboards.</description>
    <label>DashboardTarget</label>
    <nameField>
        <label>DashboardTarget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashboardTargets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>