force-app/main/default/objects/DashboardTarget__c/fields/Auto_Update__c.field-meta.xml
<CustomField>
    <fullName>Auto_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this DashboardTarget is meant to be kept up to date by automation. Any number you put in Target will be overwritten.</inlineHelpText>
    <label>Auto Update?</label>
    <type>Checkbox</type>
</CustomField>