force-app/main/default/objects/DashboardTarget__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <inlineHelpText>Filled by the automation that updates DashboardTargets with the date/time of the most recent update.</inlineHelpText>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>