force-app/main/default/objects/DashboardTarget__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <inlineHelpText>API name of the object that you are going to query in the SOQL query</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>