force-app/main/default/objects/DashboardTarget__c/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <formula>&quot;SELECT Id from &quot; &amp; Object_API_Name__c &amp; &quot; WHERE &quot; &amp; SOQL_WHERE_clause__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full text of the SOQL query that will be used in flow to keep this record up to date.</inlineHelpText>
    <label>SOQL Query</label>
    <type>Text</type>
</CustomField>