force-app/main/default/objects/DashboardTarget__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <inlineHelpText>Number that will be used as the Gauge target on your dashboard component.</inlineHelpText>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>