force-app/main/default/objects/DashboardTarget__c/validationRules/AutoUpdate_required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>AutoUpdate_required_fields</fullName>
    <active>true</active>
    <description>If this DashboardTarget will auto-update the Object and WHERE fields must be filled.</description>
    <errorConditionFormula>Auto_Update__c &amp;&amp; 
OR( 
  ISBLANK( SOQL_WHERE_clause__c ),
  ISBLANK( Object_API_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Auto_Update__c</errorDisplayField>
    <errorMessage>If this DashboardTarget will auto-update you must fill the Object API Name and SOQL WHERE clause fields.</errorMessage>
</ValidationRule>