force-app/main/default/objects/DashboardTarget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>SOQL_Query__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>